--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/interpretationtype1.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/interpretationtype1.mdx
@@ -1,6 +1,6 @@
 import React, { useEffect, useState } from 'react';
 
-export const InterpretationChart = ({ metric, container, data }) => {
+export const InterpretationChart = ({ metric, data }) => {
   const [mydata, setmydata] = useState({
     data: [],
     numFeatureLabels: 0,
