--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/how_to_read.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/how_to_read.mdx
@@ -1,6 +1,4 @@
 <div style={{width:"100%"}}>
     <h4> <b> How to read? </b> </h4>
-    <p> 
-    The length of the bar indicates how far the data points are from the ground truth using the standard metrics used to calculate regression errors. The differences indicate that the model might not be allocating correct resources (e.g., loan amount) to a certain demographic group. 
-    </p>
+    <p>The length of the bar indicates how far the data points are from the ground truth using the standard metrics used to calculate regression errors. The differences indicate that the model might not be allocating correct resources (e.g., loan amount) to a certain demographic group.</p>
 </div>
