--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/mean_absolute_error_parity.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/mean_absolute_error_parity.mdx
@@ -1,10 +1,11 @@
-export const cid = "fairness_metrics_toolbox_for_regression"
+export const cid = "fairness_metrics_toolbox_for_regression";
 
 import { MetricBarChart } from "./metricbarchart.mdx";
 
 <MetricBarChart
   metric="mae"
   metric_name="Mean Absolute Error Parity"
-  getContainerObserver={props.getContainerObserver}
   data={props.getResults(cid)}
+  width={props.width}
+  height={props.height}
 />
