--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/mean_square_error_parity.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/mean_square_error_parity.mdx
@@ -5,6 +5,7 @@ import { MetricBarChart } from "./metricbarchart.mdx";
 <MetricBarChart
   metric="mse"
   metric_name="Mean Square Error Parity"
-  getContainerObserver={props.getContainerObserver}
   data={props.getResults(cid)}
+  width={props.width}
+  height={props.height}
 />
