--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/r2_parity.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-regression/widgets/r2_parity.mdx
@@ -5,6 +5,7 @@ import { MetricBarChart } from "./metricbarchart.mdx";
 <MetricBarChart
   metric="r2"
   metric_name="R2 Score Parity"
-  getContainerObserver={props.getContainerObserver}
   data={props.getResults(cid)}
+  width={props.width}
+  height={props.height}
 />
