--- a/stock-plugins/aiverify.stock.accumulated-local-effect/widgets/alelinechart.mdx
+++ b/stock-plugins/aiverify.stock.accumulated-local-effect/widgets/alelinechart.mdx
@@ -1,7 +1,7 @@
 import React, { useEffect, useState } from 'react';
 import { LineChart } from 'aiverify-shared-library/charts'
 
-export const MultipleLineChart = ({ feature_names, results}) => {
+export const MultipleLineChart = ({ id, feature_names, results, height}) => {
     const [ mydata, setmydata ] = useState({
       data: [],
     });
@@ -49,26 +49,30 @@ export const MultipleLineChart = ({ feature_names, results}) => {
     }
 
     return (
-      <div style={{height: "100%"}}>
-        {mydata.data.map((each_feature, index) => {
-          return (
-            <div key={index} style={{width:"33%", height:"100%", float:"left", paddingBottom:"40px"}}>
-              {Object.entries(each_feature).map(function ([key, value]) {
-                return (
-                  <div key={key} style={{height:"100%"}}>
-                    <h5>{key}</h5>
-                    <LineChart data={value}
-                      xAxisDataKey="feature_value"
-                      xAxisProps={{ width:"100%", fontSize:8}}
-                      yAxisProps={{ fontSize:8}}
-                      lines={[{ dataKey:"ale"}]}
-                    />
-                  </div>
-                )
-              })}
-            </div>
-          )
-        })
+      <div className="chart-container" style={{
+        display: "grid",
+        gridTemplateColumns: "repeat(3, 1fr)",
+        gap: "20px",
+        height: height }}>
+          {mydata.data.map((each_feature, index) => {
+            return (
+              <div key={`${id}-${index}`}>
+                {Object.entries(each_feature).map(function ([key, value]) {
+                  return (
+                    <div key={`${id}-${key}`} style={{ height:"calc(100% - 40px)" }}>
+                      <h5 style={{ textAlign: "center" }}>{key}</h5>
+                      <LineChart data={value}
+                        xAxisDataKey="feature_value"
+                        xAxisProps={{ width:"100%", fontSize:8}}
+                        yAxisProps={{ fontSize:8}}
+                        lines={[{ dataKey:"ale"}]}
+                      />
+                    </div>
+                  )
+                })}
+              </div>
+            )
+          })
         }
       </div>
     )
