Update all playground notebooks

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/playground.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Environment Corruption Playground\n",
+    "\n",
+    "This notebook provides a visual preview of various **Environment Corruption** functions. You can use it to explore the effects of different environment corruption algorithms and customize their parameters before applying them in the command-line interface (CLI).\n",
+    "\n",
+    "### Available Environment Corruptions\n",
+    "\n",
+    "- Snow\n",
+    "- Fog\n",
+    "- Rain\n",
+    "\n",
+    "### How to Use This Notebook\n",
+    "\n",
+    "- The default parameter values for each environment corruption function are stored in `DEFAULT_PARAMS`.\n",
+    "- You can modify these parameters within this notebook to see their effects in real-time.\n",
+    "- Once satisfied with your custom values, you can apply them in the CLI using flags like:\n",
+    "  `--snow_intensity 1.0 2.0 3.0`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Demo Image\n",
+    "\n",
+    "The following code loads a sample image and resizes it for consistency in visualization.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,6 +47,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Snow\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -26,10 +64,17 @@
     "print(f\"original\")\n",
     "display(Image.fromarray(image))\n",
     "\n",
-    "for intensity in DEFAULT_PARAMS[\"snow_intensity\"]:\n",
-    "    out = snow(image, intensity=intensity)\n",
-    "    print(f\"snow_intensity={intensity}\")\n",
+    "for snow_intensity in DEFAULT_PARAMS[\"snow_intensity\"]:\n",
+    "    out = snow(image, intensity=snow_intensity)\n",
+    "    print(f\"{snow_intensity=}\")\n",
     "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fog\n"
    ]
   },
   {
@@ -43,10 +88,17 @@
     "print(f\"original\")\n",
     "display(Image.fromarray(image))\n",
     "\n",
-    "for intensity in DEFAULT_PARAMS[\"fog_intensity\"]:\n",
-    "    out = fog(image, intensity=intensity)\n",
-    "    print(f\"fog_intensity={intensity}\")\n",
+    "for fog_intensity in DEFAULT_PARAMS[\"fog_intensity\"]:\n",
+    "    out = fog(image, intensity=fog_intensity)\n",
+    "    print(f\"{fog_intensity=}\")\n",
     "    display(Image.fromarray(out))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Rain\n"
    ]
   },
   {
@@ -60,9 +112,9 @@
     "print(f\"original\")\n",
     "display(Image.fromarray(image))\n",
     "\n",
-    "for type in DEFAULT_PARAMS[\"rain_type\"]:\n",
-    "    out = rain(image, type=type)\n",
-    "    print(f\"rain_type={type}\")\n",
+    "for rain_type in DEFAULT_PARAMS[\"rain_type\"]:\n",
+    "    out = rain(image, type=rain_type)\n",
+    "    print(f\"{rain_type=}\")\n",
     "    display(Image.fromarray(out))"
    ]
   }
