--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-line-chart.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-line-chart.mdx
@@ -1,16 +1,15 @@
 import { CorruptionLineChart } from './corruptionlinechart.mdx'
-export const algo_cid = "blur_corruptions"
+export const algo_cid = "aiverify_blur_corruptions"
 
 {
-    props.getResults(algo_cid) ? (
-      <>
-          <CorruptionLineChart
-            data={props.getResults(algo_cid).results}
-            getContainerObserver={props.getContainerObserver}
-            corruption_function="Blur Corruptions"
-          />
-      </>
-    ) : (
-      <div>No data</div>
-    )
-  }
+  props.getResults(algo_cid) ? (
+    <CorruptionLineChart
+      data={props.getResults(algo_cid).results}
+      corruption_function="Blur Corruptions"
+      width={props.width}
+      height={props.height}
+    />
+  ) : (
+    <div>No data</div>
+  )
+}
