--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-glass.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/blur-samples-glass.mdx
@@ -1,8 +1,20 @@
-import React, { useEffect, useState } from 'react';
-import {DisplayImages} from "./display-samples.mdx"
+import React, { useEffect, useState } from "react";
+import { DisplayImages } from "./display-samples.mdx";
 
-export const algo_cid = "blur_corruptions"
-import {gaussian_blur_images, glass_blur_images, defocus_blur_images, hmotion_blur_images, vmotion_blur_images, zoom_blur_images} from "./blur-corruption-images.js"
+export const algo_cid = "aiverify_blur_corruptions";
+import {
+  gaussian_blur_images,
+  glass_blur_images,
+  defocus_blur_images,
+  hmotion_blur_images,
+  vmotion_blur_images,
+  zoom_blur_images,
+} from "./blur-corruption-images.js";
 
-<DisplayImages images = {glass_blur_images} data={props.getResults(algo_cid).results} corruption_index ={1} corruption_name = "Blur: Glass Blur" />
-
+<DisplayImages
+  id={props.id}
+  images={glass_blur_images}
+  data={props.getResults(algo_cid).results}
+  corruption_index={1}
+  corruption_name="Blur: Glass Blur"
+/>
