--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-saturate.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/digital-samples-saturate.mdx
@@ -1,8 +1,21 @@
-import React from 'react';
-import {DisplayImages} from "./display-samples.mdx"
+import React, { useEffect, useState } from "react";
+import { DisplayImages } from "./display-samples.mdx";
 
-export const algo_cid = "digital_corruptions"
-import {brightness_down_images, brightness_up_images, contrast_down_images, contrast_up_images, saturate_images, random_tilt_images, compression_images} from "./digital-corruption-images.js"
+export const algo_cid = "aiverify_digital_corruptions";
+import {
+  brightness_down_images,
+  brightness_up_images,
+  contrast_down_images,
+  contrast_up_images,
+  saturate_images,
+  random_tilt_images,
+  compression_images,
+} from "./digital-corruption-images.js";
 
-<DisplayImages images = {saturate_images} data={props.getResults(algo_cid).results} corruption_index ={4} corruption_name = "Digital: Saturate" />
-
+<DisplayImages
+  id={props.id}
+  images={saturate_images}
+  data={props.getResults(algo_cid).results}
+  corruption_index={4}
+  corruption_name="Digital: Saturate"
+/>
