--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-rain.mdx
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/widgets/environment-samples-rain.mdx
@@ -1,8 +1,17 @@
-import React from 'react';
-import {DisplayImages} from "./display-samples.mdx"
+import React, { useEffect, useState } from "react";
+import { DisplayImages } from "./display-samples.mdx";
 
-export const algo_cid = "environment_corruptions"
-import {fog_images,snow_images, rain_images} from "./environment-corruption-images.js"
+export const algo_cid = "aiverify_environment_corruptions";
+import {
+  fog_images,
+  snow_images,
+  rain_images,
+} from "./environment-corruption-images.js";
 
-<DisplayImages images = {rain_images} data={props.getResults(algo_cid).results} corruption_index ={2} corruption_name = "Environment: Rain" />
-
+<DisplayImages
+  id={props.id}
+  images={rain_images}
+  data={props.getResults(algo_cid).results}
+  corruption_index={2}
+  corruption_name="Environment: Rain"
+/>
