Rename Perspective to Random Perspective

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
@@ -16,7 +16,7 @@
     "- Contrast Up\n",
     "- Saturate Down\n",
     "- Saturate Up\n",
-    "- Perspective\n",
+    "- Random Perspective\n",
     "- JPEG Compression\n",
     "\n",
     "### How to Use This Notebook\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Perspective\n"
+    "## Random Perspective\n"
    ]
   },
   {
@@ -208,14 +208,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aiverify_digital_corruptions.utils.digital import perspective\n",
+    "from aiverify_digital_corruptions.utils.digital import random_perspective\n",
     "\n",
     "print(f\"original\")\n",
     "display(Image.fromarray(image))\n",
     "\n",
-    "for perspective_sigma in DEFAULT_PARAMS[\"perspective_sigma\"]:\n",
-    "    out = perspective(image, sigma=perspective_sigma)\n",
-    "    print(f\"{perspective_sigma=}\")\n",
+    "for random_perspective_sigma in DEFAULT_PARAMS[\"random_perspective_sigma\"]:\n",
+    "    out = random_perspective(image, sigma=random_perspective_sigma)\n",
+    "    print(f\"{random_perspective_sigma=}\")\n",
     "    display(Image.fromarray(out))"
    ]
   },
