Use local asset for corruption notebook preview

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/playground.ipynb
@@ -38,12 +38,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import requests\n",
     "from aiverify_general_corruptions.utils.general import DEFAULT_PARAMS\n",
     "from PIL import Image\n",
     "\n",
-    "url = \"https://cassette.sphdigital.com.sg/image/straitstimes/5697e92a578aada9b7fcc3e341dd89ccb4b246f7fcf8a1eb97bef2818f0189cc?w=860\"\n",
-    "image = np.array(Image.open(requests.get(url, stream=True).raw).resize((480, 300)))"
+    "image = np.array(Image.open(\"../../../user_defined_files/data/dog.jpg\").resize((720, 480)))"
    ]
   },
   {
