--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
@@ -38,17 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import requests\n",
     "from aiverify_digital_corruptions.utils.digital import DEFAULT_PARAMS\n",
     "from PIL import Image\n",
     "\n",
-    "url = \"https://cassette.sphdigital.com.sg/image/straitstimes/5697e92a578aada9b7fcc3e341dd89ccb4b246f7fcf8a1eb97bef2818f0189cc?w=860\"\n",
-    "image = np.array(Image.open(requests.get(url, stream=True).raw).resize((480, 300)))"
+    "image = np.array(Image.open(\"../../../user_defined_files/data/dog.jpg\").resize((720, 480)))"
    ]
   },
   {
