--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/inputs/fairness_tree.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/inputs/fairness_tree.mdx
@@ -1,5 +1,11 @@
-import { DecisionTree } from 'aiverify-shared-library/graph';
-import graphdata from './fairness_tree_graphdata.json';
-import definitions from './fairness_tree_definitions.json';
+import { DecisionTree } from "aiverify-shared-library/graph";
+import graphdata from "./fairness_tree_graphdata.json";
+import definitions from "./fairness_tree_definitions.json";
 
-<DecisionTree data={props.data} onChangeData={props.onChangeData} graphdata={graphdata} definitions={definitions} />
+<DecisionTree
+  data={props.data}
+  onChangeData={props.onChangeData}
+  isEditing={props.isEditing}
+  graphdata={graphdata}
+  definitions={definitions}
+/>
