add page break controls in fmtc tech metrics widgets, and add page break guide in readme

--- a/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
+++ b/stock-plugins/aiverify.stock.fairness-metrics-toolbox-for-classification/widgets/technical_interpretationtype.mdx
@@ -92,7 +92,7 @@ export const TechnicalInterpretationChart = ({ id, metric, data }) => {
   }, [metric, data])
 
   return (
-    <div style={{ display: 'flex', flexDirection: 'column', gap: 5, width: '40%', flexShrink: 0 }}>
+    <div style={{ display: 'flex', flexDirection: 'column', gap: 5, width: '100%'}}>
       <h4>{metric}</h4>
       {getContent(mydata.data)}
     </div>
