Add default parameter values in CLI help text, improve readme and notebook UX

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/blur_corruptions/playground.ipynb
@@ -20,9 +20,17 @@
     "### How to Use This Notebook\n",
     "\n",
     "- The default parameter values for each blur corruption function are stored in `DEFAULT_PARAMS`.\n",
-    "- You can modify these parameters within this notebook to see their effects in real-time.\n",
-    "- Once satisfied with your custom values, you can apply them in the CLI using flags like:\n",
-    "  `--gaussian_blur_sigma 1.0 2.0 3.0`\n"
+    "- You can modify these parameters within this notebook to see their effects in real-time, e.g.\n",
+    "\n",
+    "  ```python\n",
+    "  # for gaussian_blur_sigma in DEFAULT_PARAMS[\"gaussian_blur_sigma\"]:\n",
+    "  for gaussian_blur_sigma in [1.0, 2.0, 3.0]:\n",
+    "      out = gaussian_blur(image, sigma=gaussian_blur_sigma)\n",
+    "      ...\n",
+    "  ```\n",
+    "\n",
+    "- Once satisfied with your custom values, you can apply them in the CLI using flags like\n",
+    "  `--gaussian_blur_sigma 1.0 2.0 3.0`. For more information, please refer to [README.md](README.md).\n"
    ]
   },
   {
