Apply aec4a7c to digital corruptions

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/digital_corruptions/playground.ipynb
@@ -22,9 +22,17 @@
     "### How to Use This Notebook\n",
     "\n",
     "- The default parameter values for each digital corruption function are stored in `DEFAULT_PARAMS`.\n",
-    "- You can modify these parameters within this notebook to see their effects in real-time.\n",
-    "- Once satisfied with your custom values, you can apply them in the CLI using flags like:\n",
-    "  `--brightness_down_factor 0.1 0.2 0.3`\n"
+    "- You can modify these parameters within this notebook to see their effects in real-time, e.g.\n",
+    "\n",
+    "  ```python\n",
+    "  # for brightness_down_factor in DEFAULT_PARAMS[\"brightness_down_factor\"]:\n",
+    "  for brightness_down_factor in [0.1, 0.2, 0.3]:\n",
+    "      out = brightness_down(image, factor=brightness_down_factor)\n",
+    "      ...\n",
+    "  ```\n",
+    "\n",
+    "- Once satisfied with your custom values, you can apply them in the CLI using flags like\n",
+    "  `--brightness_down_factor 0.1 0.2 0.3`. For more information, please refer to [README.md](README.md).\n"
    ]
   },
   {
