Apply aec4a7c to environment corruptions

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/environment_corruptions/playground.ipynb
@@ -17,9 +17,17 @@
     "### How to Use This Notebook\n",
     "\n",
     "- The default parameter values for each environment corruption function are stored in `DEFAULT_PARAMS`.\n",
-    "- You can modify these parameters within this notebook to see their effects in real-time.\n",
-    "- Once satisfied with your custom values, you can apply them in the CLI using flags like:\n",
-    "  `--snow_intensity 1.0 2.0 3.0`\n"
+    "- You can modify these parameters within this notebook to see their effects in real-time, e.g.\n",
+    "\n",
+    "  ```python\n",
+    "  # for snow_intensity in DEFAULT_PARAMS[\"snow_intensity\"]:\n",
+    "  for snow_intensity in [1.0, 2.0, 3.0]:\n",
+    "      out = snow(image, intensity=snow_intensity)\n",
+    "      ...\n",
+    "  ```\n",
+    "\n",
+    "- Once satisfied with your custom values, you can apply them in the CLI using flags like\n",
+    "  `--snow_intensity 1.0 2.0 3.0`. For more information, please refer to [README.md](README.md).\n"
    ]
   },
   {
