Apply aec4a7c to general corruptions

--- a/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/playground.ipynb
+++ b/stock-plugins/aiverify.stock.image-corruption-toolbox/algorithms/general_corruptions/playground.ipynb
@@ -17,9 +17,16 @@
     "### How to Use This Notebook\n",
     "\n",
     "- The default parameter values for each general corruption function are stored in `DEFAULT_PARAMS`.\n",
-    "- You can modify these parameters within this notebook to see their effects in real-time.\n",
-    "- Once satisfied with your custom values, you can apply them in the CLI using flags like:\n",
-    "  `--gaussian_noise_sigma 0.1 0.2 0.3`\n"
+    "- You can modify these parameters within this notebook to see their effects in real-time, e.g.\n",
+    "\n",
+    "  ```python\n",
+    "  # for gaussian_noise_sigma in DEFAULT_PARAMS[\"gaussian_noise_sigma\"]:\n",
+    "  for gaussian_noise_sigma in [0.1, 0.2, 0.3]:\n",
+    "    out = gaussian_noise(image, sigma=gaussian_noise_sigma)\n",
+    "  ```\n",
+    "\n",
+    "- Once satisfied with your custom values, you can apply them in the CLI using flags like\n",
+    "  `--gaussian_noise_sigma 0.1 0.2 0.3`. For more information, please refer to [README.md](README.md).\n"
    ]
   },
   {
