--- a/stock-plugins/aiverify.stock.reports/widgets/cover_page_section.mdx
+++ b/stock-plugins/aiverify.stock.reports/widgets/cover_page_section.mdx
@@ -1,8 +1,8 @@
 import logo from './logo_w.png';
 
-<div style={{ width:props.container.width, textAlign:'right', display:'relative' }}>
+<div style={{ width:props.width, textAlign:'right', display:'relative' }}>
   <div style={{ position:'absolute', top:'60px', width:'700px', right:'40px', zIndex:6000, display:'flex', flexFlow:'column wrap', alignItems:'right', textTransform:'uppercase' }}>
-    <div style={{ fontWeight:600, fontSize:"30pt", textAlign:'right' }}>
+    <div style={{ fontWeight:600, fontSize:"30pt", textAlign:'right', marginBottom:'20px' }}>
       {props.properties.sectionSubTitle || ""}
     </div>
     <div style={{ fontWeight:600, fontSize:"36pt", textAlign:'right' }}>
