updated pdp and shap toolbox

--- a/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/pdp_graph.mdx
+++ b/stock-plugins/aiverify.stock.partial-dependence-plot/widgets/pdp_graph.mdx
@@ -2,7 +2,7 @@ import React, { useEffect, useState } from 'react';
 import { MultipleLineChart } from "./pdplinechart.mdx";
 
 
-export const cid = "partial_dependence_plot"
+export const cid = "aiverify_partial_dependence_plot"
 
 
 {props.getResults(cid)?(
